<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/trinea_info_layout" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <Button
                android:id="@+id/start_general_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_general_service" />
            <Button
                android:id="@+id/stop_general_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/start_general_service"
                android:text="@string/stop_general_service" />
            <Button
                android:id="@+id/start_intent_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stop_general_service"
                android:text="@string/start_intent_service" />
            <Button
                android:id="@+id/bind_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/start_intent_service"
                android:text="@string/bind_service" />
            <Button
                android:id="@+id/operate_bind_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bind_service"
                android:text="@string/operate_bind_service" />
            <Button
                android:id="@+id/get_bind_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/operate_bind_service"
                android:text="@string/get_bind_service" />
            <Button
                android:id="@+id/unbind_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/get_bind_service"
                android:text="@string/unbind_service" />                                                              
                        
            
        </RelativeLayout>
        
    </ScrollView>
    
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/trinea_info" />        

</RelativeLayout>
