<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/http_cache_url"
        android:hint="@string/http_cache_url_default"
        android:inputType="textUri" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/http_cache_get"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_below="@id/http_cache_url"
        android:text="@string/http_cache_get" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/okhttp_get"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_4"
        android:layout_below="@id/http_cache_url"
        android:layout_toLeftOf="@id/http_cache_get"
        android:text="@string/okhttp_get" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/async_http_get"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_4"
        android:layout_below="@id/http_cache_url"
        android:layout_toLeftOf="@id/okhttp_get"
        android:text="@string/async_http_get" />    
        
    <TextView
        android:id="@+id/http_cache_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/http_cache_get"
        android:paddingLeft="@dimen/dp_4"
        android:textStyle="bold" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/http_cache_info"
        android:layout_above="@+id/trinea_info_layout"
        android:layout_marginTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_40" >
        
        <TextView
            android:id="@+id/http_cache_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_4" />        
    </ScrollView>
    
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/trinea_info" />  
        
</RelativeLayout>
